--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,18 +25,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.12"
+            android:autoText="false"
             android:gravity="center_vertical|center_horizontal"
             android:lineSpacingExtra="8sp"
             android:text="@string/downloader_text"
             android:textAlignment="center"
+            android:textColor="@color/blue"
+            android:textSize="18sp"
             app:layout_box="all" />
 
         <TextView
             android:id="@+id/BandwidthTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.12"
-            android:gravity="center_vertical|center_horizontal" />
+            android:layout_weight="0.14"
+            android:gravity="top|center_horizontal" />
 
         <TextView
             android:id="@+id/LastDownloadTimeText"
