--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
             android:textAlignment="center"
             android:textColor="@color/blue"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_box="all" />
 
         <TextView
